2007-03-04  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Bug fix from Erik where where paths such as /home
	  would fail in the createParentDirs function.

	* libwfut/platform.cpp, libwfut/platform.h: Added functions to check for
	  file existance and setting world executable permissions.

	* tools/wfut.cpp: Display usage when no arguments are specified. Delete
	  the tempwfut.xml after the real wfut.xml file has been saved. Use
	  os_exists instead of the local file_exists function.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/IO.cpp: Added some more error checks.

	* tools/wfut.cpp: Updated some formatting and comments.

2007-02-20  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Added simple usage information.

2007-02-19  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/platform.cpp: Check %TMP%, %TEMP% then "." as possible tmp
	  file locations. Delete Win32 temp files on close.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* tools/wfut.cpp: Fix compiler warning.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* man/man1/wfut.1, configure.ac, Makefile.am, man/Makefile.am,
	  man/man1/Makefile.am: Added initial man page for wfut.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>

	* libwfut/Encoder.cpp, libwfut/Encoder.h: Renamed encode/decode to
	  encodeString and decodeString. Added an encodeURL method to encode
	  strings for suitable use as a URL.

	* libwfut/FileParser.cpp, libwfut/FileWriter.cpp, libwfut/IO.cpp,
	  tools/wfut.cpp: Updated calls to encode/decode. Make sure urls are
	  properly encoded before storing/using them.

2007-02-16  Kai Blin  <kai.blin@gmail.com>
	* configure.ac: Fix installing the wfut binary.

	* libwfut/FileWriter.cpp, libwfut/FileParser.cpp, 
	  libwfut/ChannelWriter.cpp, libwfut/ChannelParser.cpp: Fix tinyxml
	  include now that tinyxml is in the main source.

2007-02-16  Simon Goodall  <libwfut@simongoodall.co.uk>
